--- a/AgregarLibro.html
+++ b/AgregarLibro.html
@@ -1,5 +1,6 @@
 <HTML>
 	<HEAD>
+		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 		<link rel="STYLESHEET" type="text/css" href="stylesheet.css"> 
 		<TITLE>Categorizacion de libros</TITLE>
 	</HEAD>
@@ -7,15 +8,11 @@
 		<H1>Categorizacion de libros</H1>
 
 		<form action="procesar.php" method="post">
-			
-			<p>Titulo de libro: <input type="text" name="titulo" /></p>
-			<p>Recurso: <input type="text" name="host" /></p>
- 			<p><input type="submit" /></p>
+			<p>Título: <input type="text" name="titulo" /></p>
+			<p>  ISBN: <input type="text" name="isbn" /></p>
+ 			<p><input type="submit" value="Buscar" /></p>
 		</form>	
-	
-	
-	
-</BODY>
+	</BODY>
 </HTML> 
 
 
