--- a/AgregarLibro.html
+++ b/AgregarLibro.html
@@ -2,10 +2,10 @@
 	<HEAD>
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 		<link rel="STYLESHEET" type="text/css" href="stylesheet.css"> 
-		<TITLE>Categorizacion de libros</TITLE>
+		<TITLE>Busqueda de libro</TITLE>
 	</HEAD>
 	<BODY>
-		<H1>Categorizacion de libros</H1>
+		<H1>>Busqueda de libro</H1>
 
 		<form action="procesar.php" method="post">
 			<p>Título: <input type="text" name="titulo" /></p>
